<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/skywhite">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/logo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/address"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/address1"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/email"
                        android:clickable="false"
                        android:contextClickable="false"
                        android:drawableLeft="@drawable/ic_location_on_black_24dp"
                        android:drawableStart="@drawable/ic_location_on_black_24dp"
                        android:gravity="center"
                        android:inputType="none"
                        android:text="@string/adress"
                        android:textColor="@color/troe"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="LabelFor,OnClick,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/email"
                        android:padding="10dp"
                        android:text="@string/address"
                        android:textColor="@color/darkblue"
                        android:textSize="23sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="199dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/email"
                        android:clickable="false"
                        android:drawableLeft="@drawable/ic_call_black_24dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        android:gravity="center"
                        android:inputType="none"
                        android:padding="5dp"
                        android:text="@string/telephone"
                        android:textColor="@color/troe"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="LabelFor,TextFields" />

                    <LinearLayout
                        android:layout_width="276dp"
                        android:layout_height="119dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/email"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="350dp"
                            android:layout_height="65dp"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/call"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="10dp"
                                android:background="@drawable/sign_up"
                                android:padding="10dp"
                                android:src="@drawable/ic_call_white_24dp" />

                            <TextView
                                android:id="@+id/mobile"
                                android:layout_width="160dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="10dp"
                                android:padding="5dp"
                                android:text="@string/mob"
                                android:textColor="@color/darkblue"
                                android:textSize="18sp"
                                android:textStyle="italic|bold" />

                        </LinearLayout>

                        <View
                            android:layout_width="250dp"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:background="@color/grey" />

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:padding="5dp"
                            android:text="@string/tel"
                            android:textColor="@color/darkblue"
                            android:textSize="18sp"
                            android:textStyle="italic|bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/email"
                android:layout_width="337dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/email"
                        android:clickable="false"
                        android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_contact_mail_black_24dp"
                        android:gravity="center"
                        android:inputType="none"
                        android:padding="5dp"
                        android:text="@string/mail"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="272dp"
                        android:layout_height="59dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/email"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/email"
                        android:textColor="@color/darkblue"
                        android:textSize="25sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>