<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activities.SignUpActivity"
    >

    <ImageView
        android:id="@+id/locicon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="6dp"
        android:src="@drawable/locicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <LinearLayout
        android:id="@+id/mykonten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/bgkonten"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overbox"
        app:layout_constraintVertical_bias="0.63">

        <TextView
            android:id="@+id/textv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Success!"
            android:textColor="@color/darkblue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="4dp"
            android:text="تم تسجيل حسابك بنجاح"
            android:textAlignment="center"
            android:textColor="#343434"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btnclose"
            android:layout_width="180dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btnclose" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/overbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overbox"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </LinearLayout>

    <Button
        android:id="@+id/prof"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="244dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_camera_alt_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profile_ph"
        android:layout_width="139dp"
        android:layout_height="107dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingEnd="8dp"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="8dp"
            android:paddingStart="5dp"
            android:textColorHint="@color/darkblue" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/login_email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:paddingEnd="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="8dp"
            android:paddingStart="5dp"
            android:textColorHint="@color/darkblue" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_https_black_24dp"
            android:gravity="center_vertical|right"
            android:hint="@string/login_password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="8dp"
            android:paddingStart="5dp"
            android:textColorHint="@color/darkblue"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:hint="@string/user_address"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:inputType="text"
            android:paddingEnd="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="8dp"
            android:paddingStart="5dp"
            android:textColorHint="@color/darkblue" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:gravity="right|center_vertical"
            android:hint="@string/phonetext"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@color/darkblue"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center|right"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/sign_up"
        android:text="@string/regist"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

